--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,33 @@
   float:right;
 }
 
+.graph{
+  width:100%;
+  height:100%;
+}
+
+.chartjs-render-monitor{
+  width:inherit;
+  height:inherit;
+}
+
+canvas{
+  width:100%;
+  height:100%;
+}
+.chartjs-size-monitor{
+  width:100%;
+  height:100%;
+}
+.MuiTypography-root{
+  width:100%;
+  height:100%;
+}
+
+
 @media only screen and (max-width: 420px) {
   .SortBy{
     float:none;
     width:200px;
   }
-}
-
-.darkMode{
-  float:right;
 }
