--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,24 @@
   height:100%;
 }
 
+.barGraph{
+  width:50%;
+  height:50%;
+  display: inline-block;
+}
+
 @media only screen and (max-width: 420px) {
   .SortBy{
     float:none;
     width:200px;
   }
+}
+
+@media only screen and (max-width: 700px) {
+    .barGraph{
+    width:100%;
+    height:100%;
+}
 }
 
 #image{
