--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,41 @@
 #progress-indicator {
+  /* styling for progress indicator when the contacts are loading */
   margin: auto;
   width: 1%;
   padding: 10px 0px 10px 0px;
 }
 
 .leaflet-container {
+  /* css required for leaflet */
   height: 420px;
   width: 100%;
 }
 
 .SearchBar {
+  /* allows search bar to be inline with sortby */
   display: inline-block;
 }
 
 .SortBy {
+  /* floats sortby to the right */
   float: right;
 }
 
 .panels .MuiTypography-body1 {
+  /* fix for contacts by letter graph not filling the panel */
   width: 100%;
   height: 100%;
 }
 
 .barGraph {
+  /* displays two graphs side by side */
   width: 50%;
   height: 50%;
   display: inline-block;
 }
 
 @media only screen and (max-width: 420px) {
+  /* allows sortby to be responsive when screen gets smaller*/
   .SortBy {
     float: none;
     width: 200px;
@@ -36,6 +43,7 @@
 }
 
 @media only screen and (max-width: 700px) {
+  /* displays the two graphs each with width and height of 100% when screen gets smaller*/
   .barGraph {
     width: 100%;
     height: 100%;
@@ -43,9 +51,6 @@
 }
 
 #image {
+  /* brightness of the catchphrase image */
   filter: brightness(0.7);
-}
-
-#image #text {
-  position: absolute;
 }
